# xarray-video-knn

./: README.md  pyproject.toml
examples/: demo.py
tests/: test_classifier.py
xarray_video_knn/: __init__.py  classifier.py  utils.py
