[project]
name = "xarray_video_knn"
version = "0.1.0"
description = "KNN Classification of Xarray data using Video Compression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarrayvideo",
]

[tool.uv.sources]
xarrayvideo = { git = "https://github.com/OscarPellicer/xarrayvideo" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
